Project V-2: Finition du HTML

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="links">
             <a href="#portfolio">Portfolio</a>
-            <a href="mailto:loicpierard@outlook.com">Contact</a>
+            <a href="mailto:loic@outlook.com">Contact</a>
         </div>
 
         <div class="wrapper">
@@ -208,6 +208,22 @@
             <div class="appear">
                 <p>Vous avez un projet ?</p>
             </div>
+        </div>
+
+        <div class="wrapper">
+            <div class="appear" id="l2">
+                <p>Je serai ravi d'en <a href="mailto:loic@outlook.com">discuter</a></p>
+            </div>
+        </div>
+
+        <div class="wrapper">
+            <div class="appear" id="l3">
+                <p>avec vous</p>
+            </div>
+        </div>
+
+        <div class="img-wrapper">
+            <div class="img img2"></div>
         </div>
     </footer>
     
