Projet V-9: Intégration des scroll data dans les éléments header

--- a/index.html
+++ b/index.html
@@ -19,40 +19,39 @@
         </div>
 
         <div class="wrapper">
-            <div class="appear" id="h1-wrapper">
-                <h1>Pierard Loic</h1>
+            <div data-scroll class="appear" id="h1-wrapper">
+                <h1 data-scroll data-scroll-speed="4" data-scroll-position="left">Pierard Loic</h1>
             </div>
         </div>
 
         <div data-scroll data-scroll-repeat="true" class="wrapper" id="color">
-            <div class="appear" id="h2-1">
-                <h2>Développeur</h2>
+            <div data-scroll class="appear" id="h2-1">
+                <h2 data-scroll data-scroll-speed="-6" data-scroll-direction="horizontal" data-scroll-position="left">Développeur</h2>
             </div>
         </div>
 
         <div class="scroll-wrapper">
-            <p>Please scroll</p>
+            <p data-scroll data-scroll-speed="-3" data-scroll-position="top">Please scroll</p>
         </div>
     </header>
 
     <!-- Partie about -->
     <section class="about">
         <div class="img1-wrapper">
-            <div class="img img1">
-
-            </div>
+            <div class="img img1"></div>
         </div>
         <div class="h2-wrapper">
             <h2>À propos</h2>
         </div>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Autem nulla earum veniam dicta veritatis itaque ullam perspiciatis rem, placeat iusto aspernatur nesciunt! 
-            Voluptates eveniet nesciunt earum reprehenderit aspernatur laboriosam laudantium?
+        <p>Junior développeur et bachelier en informatique de gestion.
+            Passionné d'informatique, de jeux vidéos et de musculation.
+            Je programme maintenant depuis 5 ans (en tant qu'étudiant)
+            Actuellement en recherche d'emplois dans le domaine.
         </p>
     </section>
 
     <!-- Ligne de séparation -->
-    <div class="line-wrapper">
+    <div data-scroll class="line-wrapper">
         <div class="line"></div>
     </div>
 
@@ -71,79 +70,79 @@
         </h2>
 
         <div class="wrapper">
-            <div class="appear">
+            <div data-scroll class="appear">
                 <p>C</p>
             </div>
         </div>
 
         <div class="wrapper">
-            <div class="appear">
+            <div data-scroll class="appear">
                 <p>C#</p>
             </div>
         </div>
 
         <div class="wrapper">
-            <div class="appear">
+            <div data-scroll class="appear">
                 <p>JAVA</p>
             </div>
         </div>
 
         <div class="wrapper">
-            <div class="appear">
+            <div data-scroll class="appear">
                 <p>ASP.NET</p>
             </div>
         </div>
 
         <div class="wrapper">
-            <div class="appear">
+            <div data-scroll class="appear">
                 <p>Jakarta EE</p>
             </div>
         </div>
 
         <div class="wrapper">
-            <div class="appear">
+            <div data-scroll class="appear">
                 <p>Android</p>
             </div>
         </div>
 
         <div class="wrapper">
-            <div class="appear">
+            <div data-scroll class="appear">
                 <p>SQL</p>
             </div>
         </div>
 
         <div class="wrapper">
-            <div class="appear">
+            <div data-scroll class="appear">
                 <p>HTML/CSS/SASS</p>
             </div>
         </div>
 
         <div class="wrapper">
-            <div class="appear">
+            <div data-scroll class="appear">
                 <p>JavaScript</p>
             </div>
         </div>
 
         <div class="wrapper">
-            <div class="appear">
+            <div data-scroll class="appear">
                 <p>JQuery</p>
             </div>
         </div>
 
         <div class="wrapper">
-            <div class="appear">
+            <div data-scroll class="appear">
                 <p>Bootstrap</p>
             </div>
         </div>
 
         <div class="wrapper">
-            <div class="appear">
+            <div data-scroll class="appear">
                 <p>PHP</p>
             </div>
         </div>
 
         <div class="wrapper">
-            <div class="appear">
+            <div data-scroll class="appear">
                 <p>AJAX</p>
             </div>
         </div>
@@ -151,7 +150,7 @@
     </section>
 
     <!-- Ligne de séparation -->
-    <div class="line-wrapper">
+    <div data-scroll class="line-wrapper">
         <div class="line"></div>
     </div>
 
@@ -196,26 +195,26 @@
     </section>
 
     <!-- Ligne de séparation -->
-    <div class="line-wrapper">
+    <div data-scroll class="line-wrapper">
         <div class="line"></div>
     </div>
 
     <!-- Footer -->
     <footer>
         <div class="wrapper">
-            <div class="appear">
+            <div data-scroll class="appear">
                 <p>Vous avez un projet ?</p>
             </div>
         </div>
 
         <div class="wrapper">
-            <div class="appear" id="l2">
+            <div data-scroll class="appear" id="l2">
                 <p>Je serai ravi d'en <a href="mailto:loic@outlook.com">discuter</a></p>
             </div>
         </div>
 
         <div class="wrapper">
-            <div class="appear" id="l3">
+            <div data-scroll class="appear" id="l3">
                 <p>avec vous</p>
             </div>
         </div>
