--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
     <!-- Partie about -->
     <section class="about">
-        <div class="img1-wrapper">
+        <div data-scroll data-scroll-speed="-1" class="img1-wrapper">
             <div class="img img1"></div>
         </div>
-        <div class="h2-wrapper">
+        <div data-scroll data-scroll-speed="3" class="h2-wrapper">
             <h2>À propos</h2>
         </div>
         <p>Junior développeur et bachelier en informatique de gestion.
@@ -58,15 +58,15 @@
     <!-- Partie compétence -->
     <section class="skills">
         <h2 class="title">
-            <span>E</span>
-            <span>x</span>
-            <span>p</span>
-            <span>e</span>
-            <span>r</span>
-            <span>t</span>
-            <span>i</span>
-            <span>s</span>
-            <span>e</span>
+            <span data-scroll data-scroll-speed="1">E</span>
+            <span data-scroll data-scroll-speed="0">x</span>
+            <span data-scroll data-scroll-speed="1">p</span>
+            <span data-scroll data-scroll-speed="2">e</span>
+            <span data-scroll data-scroll-speed="0">r</span>
+            <span data-scroll data-scroll-speed="1">t</span>
+            <span data-scroll data-scroll-speed="2">i</span>
+            <span data-scroll data-scroll-speed="1">s</span>
+            <span data-scroll data-scroll-speed="0">e</span>
         </h2>
 
         <div class="wrapper">
@@ -157,18 +157,18 @@
     <!-- Portfolio-->
     <section class="portfolio" id="portfolio">
         <h2 class="title">
-            <span>P</span>
-            <span>o</span>
-            <span>r</span>
-            <span>t</span>
-            <span>f</span>
-            <span>o</span>
-            <span>l</span>
-            <span>i</span>
-            <span>o</span>
+            <span data-scroll data-scroll-speed="1">P</span>
+            <span data-scroll data-scroll-speed="0">o</span>
+            <span data-scroll data-scroll-speed="1">r</span>
+            <span data-scroll data-scroll-speed="2">t</span>
+            <span data-scroll data-scroll-speed="0">f</span>
+            <span data-scroll data-scroll-speed="1">o</span>
+            <span data-scroll data-scroll-speed="2">l</span>
+            <span data-scroll data-scroll-speed="1">i</span>
+            <span data-scroll data-scroll-speed="0">o</span>
         </h2>
         <div class="projects-container">
-            <div class="project" id="p1">
+            <div data-scroll data-scroll-speed="1" class="project" id="p1">
                 <img src="./assets/img/projet-1.jpg" alt="project 1">
                 <div class="project-infos">
                     <a href="https://www.google.com" target="_blank">Lyon beton</a>
@@ -176,7 +176,7 @@
                 </div>
             </div>
 
-            <div class="project" id="p2">
+            <div data-scroll class="project" id="p2">
                 <img src="./assets/img/projet-2.jpg" alt="project 2">
                 <div class="project-infos">
                     <a href="https://www.google.com" target="_blank">Casta</a>
@@ -184,7 +184,7 @@
                 </div>
             </div>
 
-            <div class="project" id="p3">
+            <div data-scroll class="project" id="p3">
                 <img src="./assets/img/projet-3.jpg" alt="project 3">
                 <div class="project-infos">
                     <a href="https://www.google.com" target="_blank">Everpost</a>
@@ -220,8 +220,9 @@
         </div>
 
         <div class="img-wrapper">
-            <div class="img img2"></div>
+            <div data-scroll data-scroll-speed="7" data-scroll-position="bottom" class="img img2"></div>
         </div>
+        <br><br><br><br>
     </footer>
     </div>
     
